# brew_controller

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/brew_app/: controller.py  main.py  server.py
backend/brew_app.egg-info/: PKG-INFO  SOURCES.txt
backend/brew_app/models/: __init__.py
controller/: platformio.ini
controller/lib/heater/: heater.h
controller/lib/http/: http.cpp  http.h
controller/lib/types/: types.h
controller/lib/wifi/: wifi.cpp  wifi.h
controller/src/: main.cpp
embedded/: platformio.ini
embedded/lib/heater/: heater.cpp
frontend/: Dockerfile  README.md  index.html  main.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts  urls.ts
frontend/src/components/: AboutStub.vue  Control.vue  Footer.vue  HomeStub.vue  ProgramForm.vue  ProgramFormStep.vue  Websocket.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: brew.ts  program.ts  setState.ts  state.ts
frontend/src/views/: AboutView.vue  ControlView.vue  HomeView.vue  ProgramView.vue
server/: Dockerfile  controller.py  requirements.txt  server.py  websocket.py
