[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brew_app"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi",
    "websockets",
    "uvicorn",
]
dynamic = ["version"]
