[tool.poetry]
name = "brew_app"
version = "0.1.0"
description = ""
authors = ["grinsipinsi <grinsipinsi@github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
websockets = "^11.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
